# 32

./: CMakeLists.txt
1/: CMakeLists.txt  Film.json
1/src/: main1.cpp
2/: CMakeLists.txt  Films.json
2/inc/: main2.hpp
2/src/: main2.cpp
3/: CMakeLists.txt  record.pb.cc  record.pb.h  record.proto
FilmLib/inc/: film.hpp
FilmLib/src/: film.cpp
